--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -1,2 +1,17 @@
 <h1>投稿一覧</h1>
-<%= @posts %>
+
+<table>
+  <tr>
+    <th>内容</th>
+  </tr>
+
+<% @posts.each do |post| %>
+  <tr>
+    <td><%= post.content %></td>
+
+    <td><%= link_to '詳細を確認する', post_path(post.id) %></td>
+  </tr>
+<% end %>
+</table>
+
+<%= link_to '新規投稿する', new_post_path %>
