--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -11,6 +11,9 @@
 
     <td><%= link_to '詳細を確認する', post_path(post.id) %></td>
     <td><%= link_to "編集する", edit_post_path(post.id) %></td>
+    <td><%= link_to '削除する', post_path(post.id), method: :delete ,data: { confirm: '本当に削除していいですか？' } %></td>
+  </tr>
+<% end %>
   </tr>
 <% end %>
 </table>
