--- a/app/views/posts/_form.html.erb
+++ b/app/views/posts/_form.html.erb
@@ -11,8 +11,11 @@
     </div>
   <% end %>
   <div class="post_content">
-    <%= form.label :content %>
     <%= form.text_field :content %>
+    <%= image_tag(@post.image.url) if @post.image && @post.image.url %>
+    <%= form.file_field :image %>
+    <%= form.hidden_field :image_cache %>
+
   </div>
   <%= form.submit %>
 <% end %>
