--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -11,9 +11,9 @@
   <tr>
     <td><%= post.content %></td>
 
-    <td><%= link_to '詳細を確認する', post_path(post.id) %></td>
-    <td><%= link_to "編集する", edit_post_path(post.id) %></td>
-    <td><%= link_to '削除する', post_path(post.id), method: :delete ,data: { confirm: '本当に削除していいですか？' } %></td>
+    <td><%= link_to '詳細を確認する', post_path(post.id), class: "btn btn-primary" %></td>
+    <td><%= link_to "編集する", edit_post_path(post.id), class: "btn btn-success " %></td>
+    <td><%= link_to '削除する', post_path(post.id), class: "btn btn-warning", method: :delete ,data: { confirm: '本当に削除していいですか？' }  %></td>
   </tr>
 <% end %>
 </table>
