--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,3 +1,4 @@
-<h1><%= @user.name %>のページ</h1>
-
+<h3>ユーザー名  <%= @user.name %></h3>
 <p>メールアドレス: <%= @user.email %></p>
+
+<%= link_to "一覧画面にもどる", posts_path %>
